# rust-deep-learning

./: .gitignore  Cargo.toml
lib/: Cargo.toml  build.rs
lib/src/: bindgen.sh  i_malloc.rs  lib.rs  mkl_blacs.rs  mkl_blas.rs  mkl_cblas.rs  mkl_cdft_types.rs  mkl_cluster_sparse_solver.rs  mkl_compact.rs  mkl_df.rs  mkl_df_defines.rs  mkl_df_functions.rs  mkl_df_types.rs  mkl_dfti.rs  mkl_direct_types.rs  mkl_dnn.rs  mkl_dnn_types.rs  mkl_dss.rs  mkl_lapack.rs  mkl_lapacke.rs  mkl_pardiso.rs  mkl_pblas.rs  mkl_poisson.rs  mkl_rci.rs  mkl_scalapack.rs  mkl_service.rs  mkl_solvers_ee.rs  mkl_spblas.rs  mkl_trans.rs  mkl_trig_transforms.rs  mkl_types.rs  mkl_version.rs  mkl_vml.rs  mkl_vml_defines.rs  mkl_vml_functions.rs  mkl_vml_types.rs  mkl_vsl.rs  mkl_vsl_defines.rs  mkl_vsl_functions.rs  mkl_vsl_types.rs  (+1 more)
lib/src/utils/: matrix.rs  vector.rs
mkl/: Cargo.toml  bindgen.sh
mkl/src/: blacs.rs  blas.rs  cblas.rs  cdft_types.rs  cluster_sparse_solver.rs  compact.rs  df.rs  df_defines.rs  df_functions.rs  df_types.rs  dfti.rs  direct_types.rs  dnn.rs  dnn_types.rs  dss.rs  i_malloc.rs  lapack.rs  lapacke.rs  lib.rs  pardiso.rs  pblas.rs  poisson.rs  rci.rs  scalapack.rs  service.rs  solvers_ee.rs  spblas.rs  trans.rs  trig_transforms.rs  types.rs  version.rs  vml.rs  vml_defines.rs  vml_functions.rs  vml_types.rs  vsl.rs  vsl_defines.rs  vsl_functions.rs  vsl_types.rs
src/: main.rs
