[package]
name = "lib"
version = "0.1.0"
authors = ["Love Brandefelt <lbrande>"]
edition = "2018"

[dependencies]
ndarray = { version = "0.12.1", features = ["blas"] }
ndarray-rand = "0.9.0"
rand = "0.6.0"
blas-src = { version = "0.2.0", default-features = false, features = ["intel-mkl"] }
intel-mkl-src = "0.2.3"
